[gd_scene load_steps=22 format=3 uid="uid://b4c1q3jiadym1"]

[ext_resource type="Script" path="res://level/level.gd" id="1_pduli"]
[ext_resource type="PackedScene" uid="uid://dg5dmtikklnwn" path="res://enemy/assault_tank.tscn" id="2_jukn7"]
[ext_resource type="PackedScene" uid="uid://bbtkbj3sj8rn1" path="res://enemy/helicopter.tscn" id="3_82vre"]
[ext_resource type="Texture2D" uid="uid://da63co3ix33ku" path="res://level/asset/city_1.png" id="4_2dmgx"]
[ext_resource type="PackedScene" uid="uid://pu6gx570i247" path="res://enemy/jeep.tscn" id="4_52cte"]
[ext_resource type="PackedScene" uid="uid://mp15xma1rlvc" path="res://enemy/artillery.tscn" id="5_7yxxl"]
[ext_resource type="PackedScene" uid="uid://bgntfh7ttfv45" path="res://enemy/Drop/item_drop.tscn" id="5_80beb"]
[ext_resource type="Texture2D" uid="uid://cs6s0ype7ijf7" path="res://level/asset/city_2.png" id="6_32e8q"]
[ext_resource type="Texture2D" uid="uid://dscdw3iwb4w0v" path="res://level/asset/city_1_left.png" id="8_6r8pl"]
[ext_resource type="Texture2D" uid="uid://b2gqskoubiwkg" path="res://level/asset/city_1_right.png" id="9_tvrjb"]
[ext_resource type="Texture2D" uid="uid://dxxbu2hvridt3" path="res://level/asset/city_1_left_and_right.png" id="10_83hcv"]
[ext_resource type="Texture2D" uid="uid://bufchavax2ofs" path="res://level/asset/city_2_left.png" id="12_mlhpg"]
[ext_resource type="Texture2D" uid="uid://cpujjmy71afbe" path="res://level/asset/city_2_right.png" id="13_lrkfi"]
[ext_resource type="Texture2D" uid="uid://bia00ywnfywg0" path="res://level/asset/city_2_left_and_right.png" id="14_1ke7r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0j4l"]
size = Vector2(424.5, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tvnd"]
size = Vector2(393, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b6yq"]
size = Vector2(332.8, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6md14"]
size = Vector2(307.2, 1106)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_id7lv"]
size = Vector2(1930, 266)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e08w4"]
size = Vector2(1930, 266)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xpo8k"]
size = Vector2(1930, 266)

[node name="level_a" type="Node2D"]
z_index = -1
script = ExtResource("1_pduli")
assault_tank_scene = ExtResource("2_jukn7")
helicopter_scene = ExtResource("3_82vre")
jeep_scene = ExtResource("4_52cte")
artillery_scene = ExtResource("5_7yxxl")
item_drop_scene = ExtResource("5_80beb")

[node name="Sprites" type="Node2D" parent="."]

[node name="city_1_basic" type="Sprite2D" parent="Sprites"]
texture = ExtResource("4_2dmgx")
centered = false

[node name="city_1_left" type="Sprite2D" parent="Sprites"]
texture = ExtResource("8_6r8pl")
centered = false

[node name="city_1_right" type="Sprite2D" parent="Sprites"]
texture = ExtResource("9_tvrjb")
centered = false

[node name="city_1_left_and_right" type="Sprite2D" parent="Sprites"]
texture = ExtResource("10_83hcv")
centered = false

[node name="city_2_basic" type="Sprite2D" parent="Sprites"]
position = Vector2(960, 540)
texture = ExtResource("6_32e8q")

[node name="city_2_left" type="Sprite2D" parent="Sprites"]
position = Vector2(960, 540)
texture = ExtResource("12_mlhpg")

[node name="city_2_right" type="Sprite2D" parent="Sprites"]
position = Vector2(960, 540)
texture = ExtResource("13_lrkfi")

[node name="city_2_left_and_right" type="Sprite2D" parent="Sprites"]
position = Vector2(960, 540)
texture = ExtResource("14_1ke7r")

[node name="left_border" type="Node2D" parent="."]
position = Vector2(128, 544)
scale = Vector2(4, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D"]
position = Vector2(203.75, 552)
shape = SubResource("RectangleShape2D_y0j4l")

[node name="StaticBody2D_Other" type="Area2D" parent="left_border" groups=["decor_static"]]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_border/StaticBody2D_Other"]
position = Vector2(187.5, 552)
shape = SubResource("RectangleShape2D_7tvnd")

[node name="right_border" type="Node2D" parent="."]
position = Vector2(1760, 544)
scale = Vector2(5, 17)

[node name="StaticBody2D" type="StaticBody2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D"]
position = Vector2(89.6, 552)
shape = SubResource("RectangleShape2D_8b6yq")

[node name="StaticBody2D_Other" type="Area2D" parent="right_border"]
position = Vector2(-32, -32)
scale = Vector2(0.25, 0.0588235)
collision_layer = 16
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_border/StaticBody2D_Other"]
position = Vector2(102.4, 552)
shape = SubResource("RectangleShape2D_6md14")

[node name="other_level" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="other_level"]
position = Vector2(952, 136)
shape = SubResource("RectangleShape2D_id7lv")

[node name="block_last_level" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="block_last_level"]
position = Vector2(960, 704)
shape = SubResource("RectangleShape2D_e08w4")
debug_color = Color(0.647492, 0.521134, 3.85046e-07, 0.42)

[node name="blocker" type="StaticBody2D" parent="." groups=["decor_static"]]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocker"]
position = Vector2(960, 944)
shape = SubResource("RectangleShape2D_xpo8k")
debug_color = Color(0.954705, 0.109504, 0.462659, 0.42)

[node name="spawn_point" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="spawn_point"]
position = Vector2(456, 152)

[node name="Marker2D3" type="Marker2D" parent="spawn_point"]
position = Vector2(480, 488)

[node name="Marker2D2" type="Marker2D" parent="spawn_point"]
position = Vector2(1408, 392)

[node name="Marker2D4" type="Marker2D" parent="spawn_point"]
position = Vector2(1048, 472)

[node name="Marker2D7" type="Marker2D" parent="spawn_point"]
position = Vector2(1200, 192)

[node name="Marker2D5" type="Marker2D" parent="spawn_point"]
position = Vector2(632, 672)

[node name="Marker2D6" type="Marker2D" parent="spawn_point"]
position = Vector2(1456, 712)

[connection signal="body_entered" from="left_border/StaticBody2D_Other" to="." method="_on_static_body_2d_other_body_entered"]
[connection signal="body_entered" from="right_border/StaticBody2D_Other" to="." method="_on_static_body_2d_other_body_entered"]
[connection signal="body_entered" from="other_level" to="." method="_on_other_level_body_entered"]
[connection signal="body_entered" from="block_last_level" to="." method="_on_block_last_level_body_entered"]
